# BrushOS-Robotic-painting-in-action

./: .gitignore  README.md  arm_baseline_experiment_observations.json  camera_tools.py  main.py  niryo_tools.py  poses.json  pyproject.toml  run_big_poster_calligraphy.py  run_calligraphy_demo.py  run_camera_agent_interactive.py  run_camera_agent_once.py  run_niryo_agent_once.py  run_paint_demo.py  run_pose_benchmark.py  run_yinyang_poster.py  teach_poses.py
camera_agent/: agent.py  arm_observations.py  arm_tools.py  key_rotation.py  persistence.py
docs/logs/: run.logs
niryo_agent/: agent.py
scripts/: _bootstrap.py  capture_photo.py  run_big_poster_calligraphy.py  run_calligraphy_demo.py  run_camera_agent_interactive.py  run_camera_agent_once.py  run_niryo_agent_once.py  run_paint_demo.py  run_pose_benchmark.py  run_yinyang_poster.py  teach_poses.py
tests/: conftest.py  test_camera_tools.py  test_camera_tools_live.py  test_niryo_tools_live.py
