[project]
name = "pet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.24.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyniryo>=1.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "live_capture: requires camera hardware",
    "live_arm: requires Niryo Ned hardware",
]
